# CRMApp

./: .env.example  .gitignore  AGENT-CONTEXT.md  CLAUDE-CODE-FEATURES.md  CLAUDE.md  CRM_IMPLEMENTATION_TASKS.md  CRM_Requirements_Specification.docx  EPIC-ROADMAP.md  HOW-TO-IMPLEMENT.md  MCP-SETUP.md  PARALLEL-AGENTS.md  PROGRESS.md  SPEC.md  WORKFLOW.md  docker-compose.yml  package.json  req_text.txt
.claude/: settings.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: audit.py  config.py  dependencies.py  enums.py  envelope.py  feature_flags.py  logging.py  rbac.py  security.py
apps/api/app/db/: client.py
apps/api/app/middleware/: error_handler.py  performance.py  security_headers.py
apps/api/app/modules/account/: router.py  schemas.py  service.py
apps/api/app/modules/activity/: router.py  schemas.py  service.py
apps/api/app/modules/admin/: router.py  schemas.py  service.py
apps/api/app/modules/analytics/: router.py  schemas.py  service.py
apps/api/app/modules/auth/: repository.py  router.py  schemas.py  service.py
apps/api/prisma/: provision.sql  schema.prisma  seed.py
apps/api/tests/: conftest.py  test_accounts.py  test_activities.py  test_admin.py  test_analytics.py  test_auth.py  test_auth_routes.py  test_campaigns.py  test_comms.py  test_contacts.py  test_contracts.py  test_data.py  test_db_schema.py  test_envelope.py  test_error_handler.py  test_health.py  test_integrations.py  test_invoices.py  test_kb.py  test_leads.py  test_nfr.py  test_pipeline.py  test_projects.py  test_sla.py  test_tickets.py
(+491 files in other folders)
